# sistema-personal-wsp

./: CLAUDE.md  example_usage.py  hello.py  main.py  pyproject.toml
src/app/: __init__.py
src/app/ia/: __init__.py  openai_processor.py
src/app/services/: __init__.py  twilio.py
